# NumericalMethods

./: .gitmodules  .replit  NumericalMethods.sln  README.md
.upm/: store.json
C1.Lab1/: GaussSolver.cs  Program.cs
C1.Lab2/: C1.Lab2.csproj  GivensMethod.cs  JacobiSolver.cs  Program.cs  SimpleIterationSolver.cs
C1.Lab3/: Gradient.cs  Newton.cs  Program.cs  SimpleIterationSolver.cs
C1Lab1/: GaussSolver.cs  Program.cs
C1Lab2/: C1Lab2.csproj  GivensMethod.cs  JacobiSolver.cs  Program.cs  SimpleIterationSolver.cs
C1Lab3/: Gradient.cs  Newton.cs  Program.cs  SimpleIterationSolver.cs
C2.Lab1/: C2.Lab1.fsproj  Chebyshev.fs  Integrate.fs  Program.fs
C2.Lab2/: C2.Lab2.fsproj  Program.fs
C2.Lab3/: C2.Lab3.csproj  Program.cs
C2.Lab4/: Adams.fs  Adams4.fs  C2.Lab4.fsproj  Euler.fs  Hoyna.fs  Operators.fs  Program.fs  RungeKutta.fs
C2Lab1/: C2Lab1.fsproj  Chebyshev.fs  Integrate.fs  Program.fs
C2Lab2/: Program.fs
C2Lab3/: Program.fs
Lab1/: GaussSolver.cs  Program.cs
Lab2/: GivensMethod.cs  JacobiSolver.cs  Program.cs  SimpleIterationSolver.cs
Lab3/: Gradient.cs  Lab3.csproj  Newton.cs  Program.cs  SimpleIterationSolver.cs
Lab5/: Chebyshev.fs  Integrate.fs  Lab5.fsproj  Program.fs
Lab6/: Program.fs
M1.Lab1/: Program.fs
M1.Lab2/: Program.fs
M1.Lab4/: main.py  pyproject.toml
MatrixArithmetic/: CommonExtensionMethods.cs  FuncExtensionMethods.cs  Matrix.cs  MatrixArithmetic.csproj  Polynom.cs  Vector.cs
MatrixArithmetic/Matrix/: IMatrix.cs  Matrix.cs
numeric-methods/: index.html  package-lock.json  package.json  vite.config.js
(+28 files in other folders)
